// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavigationBar Renders "Not logged in" correctly 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Popover2
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            />
          </Blueprint5.Navbar>
        }
        disabled={true}
        interactionKind="hover"
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
      >
        <NavLink
          className="NavigationBar__link bp5-button bp5-minimal bp5-active"
          to="/welcome"
        >
          <Blueprint5.Icon
            autoLoad={true}
            icon="symbol-diamond"
            tagName="span"
          />
          <Blueprint5.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            Source Academy @ NUS
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Popover2>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="briefcase"
          tagName="span"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student with course 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Popover2
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            >
              <NavLink
                className={[Function]}
                title="Missions"
                to="/courses/1/missions"
              >
                <Blueprint5.Icon
                  autoLoad={true}
                  icon="flame"
                  tagName="span"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Missions
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Quests"
                to="/courses/1/quests"
              >
                <Blueprint5.Icon
                  autoLoad={true}
                  icon="lightbulb"
                  tagName="span"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Quests
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Paths"
                to="/courses/1/paths"
              >
                <Blueprint5.Icon
                  autoLoad={true}
                  icon="predictive-analysis"
                  tagName="span"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Paths
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Contests"
                to="/courses/1/contests"
              >
                <Blueprint5.Icon
                  autoLoad={true}
                  icon="comparison"
                  tagName="span"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Contests
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
              <NavLink
                className={[Function]}
                title="Missions"
                to="/courses/1/missions"
              >
                <Blueprint5.Icon
                  autoLoad={true}
                  icon="manual"
                  tagName="span"
                />
                <div
                  className="hidden-xs hidden-sm"
                >
                  Missions
                </div>
                <NotificationBadge
                  disableHover={true}
                  notificationFilter={[Function]}
                />
              </NavLink>
            </Blueprint5.NavbarGroup>
          </Blueprint5.Navbar>
        }
        disabled={true}
        interactionKind="hover"
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
      >
        <NavLink
          className="NavigationBar__link bp5-button bp5-minimal bp5-active"
          to="/courses/1"
        >
          <Blueprint5.Icon
            autoLoad={true}
            icon="symbol-diamond"
            tagName="span"
          />
          <Blueprint5.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            CS1101S
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Popover2>
      <NavLink
        className={[Function]}
        title="Sourcecast"
        to="/courses/1/sourcecast"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="music"
          tagName="span"
        />
        <div
          className=""
        >
          Sourcecast
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Playground"
        to="/playground"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="code"
          tagName="span"
        />
        <div
          className=""
        >
          Playground
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="briefcase"
          tagName="span"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="SICP JS"
        to="/sicpjs"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="book"
          tagName="span"
        />
        <div
          className=""
        >
          SICP JS
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="Achievements"
        to="/courses/1/achievements"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="mountain"
          tagName="span"
        />
        <div
          className=""
        >
          Achievements
        </div>
      </NavLink>
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={
        <AcademyNavigationBar
          assessmentTypes={
            Array [
              "Missions",
              "Quests",
              "Paths",
              "Contests",
              "Missions",
            ]
          }
        />
      }
      path="*"
    />
  </Routes>
</React.Fragment>
`;

exports[`NavigationBar Renders correctly for student without course 1`] = `
<React.Fragment>
  <Blueprint5.Navbar
    className="NavigationBar primary-navbar primary-navbar bp5-dark"
  >
    <Blueprint5.NavbarGroup
      align="left"
    >
      <Popover2
        content={
          <Blueprint5.Navbar>
            <Blueprint5.NavbarGroup
              align="left"
            />
          </Blueprint5.Navbar>
        }
        disabled={true}
        interactionKind="hover"
        popoverClassName="desktop-navbar-popover"
        position="bottom-right"
      >
        <NavLink
          className="NavigationBar__link bp5-button bp5-minimal bp5-active"
          to="/welcome"
        >
          <Blueprint5.Icon
            autoLoad={true}
            icon="symbol-diamond"
            tagName="span"
          />
          <Blueprint5.NavbarHeading
            style={
              Object {
                "paddingBottom": "0px",
              }
            }
          >
            Source Academy @ NUS
          </Blueprint5.NavbarHeading>
        </NavLink>
      </Popover2>
      <NavLink
        className={[Function]}
        title="Classroom"
        to="/githubassessments"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="briefcase"
          tagName="span"
        />
        <div
          className=""
        >
          Classroom
        </div>
      </NavLink>
      <NavLink
        className={[Function]}
        title="SICP JS"
        to="/sicpjs"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="book"
          tagName="span"
        />
        <div
          className=""
        >
          SICP JS
        </div>
      </NavLink>
    </Blueprint5.NavbarGroup>
    <Blueprint5.NavbarGroup
      align="right"
    >
      <NavLink
        className={[Function]}
        to="/contributors"
      >
        <Blueprint5.Icon
          autoLoad={true}
          icon="heart"
          tagName="span"
        />
      </NavLink>
      <div
        className="visible-xs"
      >
        <Blueprint5.NavbarDivider
          className="thin-divider"
        />
      </div>
      <div
        className="hidden-xs"
      >
        <Blueprint5.NavbarDivider
          className="default-divider"
        />
      </div>
      <Dropdown />
    </Blueprint5.NavbarGroup>
  </Blueprint5.Navbar>
  <Routes>
    <Route
      element={null}
      path="/playground"
    />
    <Route
      element={null}
      path="/githubassessments/*"
    />
    <Route
      element={null}
      path="/contributors"
    />
    <Route
      element={null}
      path="/courses/:courseId/sourcecast"
    />
    <Route
      element={null}
      path="/courses/:courseId/achievements"
    />
    <Route
      element={<SicpNavigationBar />}
      path="/sicpjs/:section?"
    />
    <Route
      element={null}
      path="*"
    />
  </Routes>
</React.Fragment>
`;
